--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "handlebars": "^4.7.7",
     "markdown-it": "^12.0.4",
+    "markdown-it-container": "^3.0.0",
     "yaml-front-matter": "^4.1.1"
   }
 }
