--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "handlebars": "^4.7.7",
+    "html-pdf-node": "^1.0.7",
     "markdown-it": "^12.0.4",
     "markdown-it-container": "^3.0.0",
     "yaml-front-matter": "^4.1.1"
