--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   ],
   "repository": "git@git.oberlab.de:mobiles-fablab/portfolio.git/portfolio",
   "scripts": {
-    "generate": "node src/generate.js"
+    "generate": "node --max-old-space-size=4096 src/generate.js"
   },
   "license": "MIT",
   "devDependencies": {
     "handlebars": "^4.7.7",
     "html-pdf-node": "^1.0.7",
-    "markdown-it": "^12.0.4",
+    "markdown-it": "^12.0.6",
     "markdown-it-container": "^3.0.0",
     "yaml-front-matter": "^4.1.1"
   }
